--- a/.frogbot/frogbot-config.yml
+++ b/.frogbot/frogbot-config.yml
@@ -77,8 +77,8 @@
 
       # [Default: root directory]
       # List of relative path's to the projects directories in the git repository. If left empty (without providing "." yourself as the root directory's path), a recursive scan is triggered from the root directory of the project.
-      #   workingDirs:
-      #     - "."
+         workingDirs:
+           - "."
 
       # [Default: ["*.git*", "*node_modules*", "*target*", "*venv*", "*test*"]]
       # List of exclusion patterns (utilizing wildcards) for excluding paths in the source code of the Git repository during SCA scans.
